--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
+            <h3>Eclipse RPG Toolkit</h3>
+            <p>Designed and developed a text-based RPG using object-oriented programming (OOP), focusing on game mechanics, file handling, and scalable code structure. The game features a turn-based combat system, procedural enemy generation, and dynamic inventory management. Players can equip weapons and armor strategically while battling dynamically generated enemies.</p>
+            <ul>
+                <li>Modular OOP design for Weapons, Armor, Items, and Enemies</li>
+                <li>Turn-based combat system with inventory management</li>
+                <li>Procedural enemy generation based on difficulty</li>
+                <li>Dynamic file handling for loading game assets</li>
+            </ul>
+            <p>This project enhanced my problem-solving and software design skills, deepening my expertise in Python, data science, and software engineering.</p>
+            <a href="https://github.com/WilliamCook0811/EclipseRPGToolkit" target="_blank">View on GitHub</a>
+        </div>
+        
+        <div class="project">
             <h3>Tracker</h3>
             <p>Tracker is a reflex-based game that challenges players to manage an increasing number of randomly placed "X" buttons on the screen. The game follows a simple yet engaging mechanic: players must click on each X before too many accumulate. The game dynamically adapts by continuously spawning new buttons every 0.25 seconds while enforcing spatial constraints on placement. Players win by successfully removing 100 Xs but lose if 10 or more remain on the screen simultaneously.</p>
             <a href="https://github.com/WilliamCook0811/Tracker/tree/main" target="_blank">View on GitHub</a>
