--- a/projects.html
+++ b/projects.html
@@ -19,18 +19,17 @@
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </nav>
-    <button id="darkModeToggle">Toggle Dark Mode</button>
   </header>
 
   <section data-aos="fade-up" id="projects">
     <h2>All Projects</h2>
-    <!-- ------------------------- -->
     <div class="projects-grid">
-    <!-- ------------------------------------------------------------------------ -->
+
+      <!-- ==================== PROJECT 1 ==================== -->
       <div class="project">
         <h3>Eclipse RPG Toolkit</h3>
         <p class="short-description">
-          Designed and developed a text-based RPG using object-oriented programming (OOP), focusing on game mechanics, file handling, and scalable code structure. The game features a turn-based combat system, procedural enemy generation, and dynamic inventory management. Players can equip weapons and armor strategically while battling dynamically generated enemies.
+          Designed and developed a text-based RPG using object-oriented programming (OOP), focusing on game mechanics, file handling, and scalable code structure...
         </p>
         <div class="full-description">
           <ul>
@@ -39,28 +38,25 @@
             <li>Procedural enemy generation based on difficulty</li>
             <li>Dynamic file handling for loading game assets</li>
           </ul>
-          <p>
-            This project enhanced my problem-solving and software design skills, deepening my expertise in Python, data science, and software engineering.
-          </p>
+          <p>This project enhanced my problem-solving and software design skills...</p>
           <a href="https://github.com/WilliamCook0811/EclipseRPGToolkit" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
 
-    <!-- ------------------------------------------------------------------------ -->
-    <div class="project">
-      <h3>Tracker</h3>
-      <p class="short-description">
-        Tracker is a reflex-based game that challenges players to manage an increasing number of randomly placed "X" buttons on the screen. The game follows a simple yet engaging mechanic: players must click on each X before too many accumulate. The game dynamically adapts by continuously spawning new buttons every 0.25 seconds while enforcing spatial constraints on placement. Players win by successfully removing 100 Xs but lose if 10 or more remain on the screen simultaneously.
-      </p>
-      <div class="full-description">
-        <a href="https://github.com/WilliamCook0811/Tracker/tree/main" target="_blank">View on GitHub</a>
+      <!-- ==================== PROJECT 2 ==================== -->
+      <div class="project">
+        <h3>Tracker</h3>
+        <p class="short-description">
+          Tracker is a reflex-based game that challenges players to manage an increasing number of randomly placed "X" buttons on the screen...
+        </p>
+        <div class="full-description">
+          <a href="https://github.com/WilliamCook0811/Tracker/tree/main" target="_blank">View on GitHub</a>
+        </div>
+        <button class="toggle-button">View More</button>
       </div>
-      <button class="toggle-button">View More</button>
-    </div>
 
-        <!-- ------------------------------------------------------------------------ -->
-
+      <!-- ==================== PROJECT 3 ==================== -->
       <div class="project">
         <h3>Tic-Tac-Toe with a Basic UI</h3>
         <p class="short-description">
@@ -71,8 +67,7 @@
         </div>
         <button class="toggle-button">View More</button>
       </div>
-    <!-- ------------------------------------------------------------------------ -->
-      
+
     </div>
   </section>
 
@@ -82,11 +77,6 @@
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>AOS.init();</script>
-  <script>
-    document.getElementById("darkModeToggle").addEventListener("click", function () {
-      document.body.classList.toggle("light-mode");
-    });
-  </script>
   <script>
     document.querySelectorAll('.toggle-button').forEach(button => {
       button.addEventListener('click', () => {
