--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,27 @@
         <button class="toggle-button">View More</button>
       </div>
 
+      <!-- ==================== PROJECT 4 ==================== -->
+      <div class="project">
+      <h3>This Website!</h3>
+      <p class="short-description">
+      This portfolio website was designed and developed from scratch using HTML, CSS, and JavaScript. It showcases my technical skills, projects, and experience in a responsive and visually appealing layout.
+      </p>
+      <div class="full-description">
+      <ul>
+      <li>Built with semantic HTML and modern CSS for clean structure and maintainability</li>
+      <li>Uses JavaScript for interactive components like expandable project descriptions</li>
+      <li>Styled to match a professional dark theme with animation support</li>
+      <li>Optimized for desktop and mobile devices</li>
+      </ul>
+      <p>
+      Developing this site helped solidify my frontend development abilities and provided a real-world context for applying responsive design, accessibility, and component-based thinking.
+      </p>
+      <a href="https://github.com/WilliamCook0811/WilliamCook0811.github.io" target="_blank">View Code on GitHub</a>
+      </div>
+      <button class="toggle-button">View More</button>
+      </div>
+
       <!-- ==================== PROJECT 3 ==================== -->
       <div class="project">
         <h3>Tic-Tac-Toe with a Basic UI</h3>
