--- a/projects.html
+++ b/projects.html
@@ -124,7 +124,7 @@
       </div>
       <!-- ==================================================== -->
       <div class="project">
-        <h3>ChaosBot</h3>
+        <h3>Discord Bot</h3>
         <p class="short-description">
           A Python Discord bot delivering random GIFs, witty moderation, and spontaneous voice-channel antics through async event handling.
         </p>
