--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="home">
     <div class="intro">
       <h2>Hi, I'm William Cook</h2>
-      <p>A Computer Science student passionate about coding, cybersecurity, and building innovative projects.</p>
+      <p>A Computer Science student passionate about development, problem-solving, and real-world programming challenges.</p>
       <img src="Portrait.PNG" alt="Portrait of William Cook" class="portrait">
       <div class="links">
         <a href="https://www.linkedin.com/in/williamcook0811/" target="_blank">LinkedIn</a>
@@ -179,11 +179,6 @@
 
   countLeetCodeFolders();
 </script>
-
-
-
-
-
 
 </body>
 </html>
