--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,29 @@
     <h2>All Projects</h2>
     <div class="projects-grid">
 
+
+      <!-- ==================================================== -->
+       
+      <div class="project">
+        <h3>Block Breaker</h3>
+        <p class="short-description">
+          I built this drag-and-drop puzzle game using Pygame. Players place random block shapes onto a grid and score points by clearing full rows or columns. This project gave me hands-on experience with managing game state and designing interactive gameplay mechanics.
+        </p>
+        <div class="full-description">
+          <ul>
+            <li>Developed dynamic block spawning using a library of over 30 unique shapes</li>
+            <li>Implemented mouse-based interaction to move, place, and validate blocks on a grid</li>
+            <li>Built collision and fit-checking logic for accurate placement and scoring</li>
+            <li>Designed a scoring system that rewards clearing full rows or columns</li>
+          </ul>
+          <p>This project enhanced my ability to structure interactive systems, manage game state efficiently, and apply core programming principles like modularity and reusability within a graphical framework.</p>
+          <img src="gifs/blockBreaker.gif" alt="Block Breaker gameplay demo" style="max-width: 100%; height: auto;">
+          <a href="https://github.com/WilliamCook0811/block-breaker" target="_blank">View on GitHub</a>
+        </div>
+        <button class="toggle-button">View More</button>
+      </div>
+
+
       <!-- ==================================================== -->
        
       <div class="project">
