--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <p>A Computer Science student passionate about development, problem-solving, and real-world programming challenges.</p>
       <img src="Portrait.PNG" alt="Portrait of William Cook" class="portrait">
       <div class="links">
-        <a href="https://www.linkedin.com/in/williamcook0811/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/WilliamCook0811" target="_blank">GitHub</a>
+        <a href="www.linkedin.com/in/willaurum" target="_blank">LinkedIn</a>
+        <a href="https://github.com/willaurum" target="_blank">GitHub</a>
         <a href="William Cook - Resume.pdf" download>Download Resume</a>
       </div>
     </div>
@@ -72,7 +72,7 @@
       <h3>LeetCode</h3>
         <p>I have currently completed <span id="leetcode-count-exp">Loading...</span> LeetCode problems.</p>
         <p>If you would like to view which problems I have completed and see their solutions, you can check out my GitHub repository!</p>
-        <p> <a href="https://github.com/WilliamCook0811/LeetCode-Solutions" target="_blank">View on GitHub</a> 
+        <p> <a href="https://github.com/willaurum/LeetCode-Solutions" target="_blank">View on GitHub</a> 
       </p>
     </div>
 
@@ -111,7 +111,7 @@
           <p>
 
           </p>
-          <a href="https://github.com/WilliamCook0811/Static-Website-Generator" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/Static-Website-Generator" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -153,7 +153,7 @@
  <!-- Script for checking total LeetCode problems solved -->
 <script>
   async function countLeetCodeFolders() {
-    const owner = "WilliamCook0811";
+    const owner = "Willaurum";
     const repo = "LeetCode-Solutions";
     const url = `https://api.github.com/repos/${owner}/${repo}/contents`;
 
