--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
           </ul>
           <p>This project enhanced my ability to structure interactive systems, manage game state efficiently, and apply core programming principles like modularity and reusability within a graphical framework.</p>
           <img src="gifs/blockBreaker.gif" alt="Block Breaker gameplay demo" style="max-width: 100%; height: auto;">
-          <a href="https://github.com/WilliamCook0811/block-breaker" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/block-breaker" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -64,7 +64,7 @@
           </ul>
           <p>This project helped me deepen my understanding of animation timing, event-driven programming, and basic game mechanics while solidifying my comfort with Python GUI development.</p>
           <img src="gifs/snakeVideo.gif" alt="Snake gameplay demo" style="max-width: 100%; height: auto;">
-          <a href="https://github.com/WilliamCook0811/Snake-Game" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/Snake-Game" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -91,7 +91,7 @@
           <p>
             
           </p>
-          <a href="https://github.com/WilliamCook0811/Static-Website-Generator" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/Static-Website-Generator" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -111,7 +111,7 @@
             <li>Dynamic file handling for loading game assets</li>
           </ul>
           <p>This project enhanced my problem-solving and software design skills...</p>
-          <a href="https://github.com/WilliamCook0811/EclipseRPGToolkit" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/EclipseRPGToolkit" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -133,7 +133,7 @@
             Built with Python and Tkinter, Tracker is a fun game that tests your speed and hand-eye coordination.
           </p>
           <img src="gifs/Trackervideo.gif" alt="Tracker gameplay demo" style="max-width: 100%; height: auto;">
-          <a href="https://github.com/WilliamCook0811/tracker" target="_blank">View Code on GitHub</a>
+          <a href="https://github.com/willaurum/tracker" target="_blank">View Code on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
@@ -154,7 +154,7 @@
       <p>
       Developing this site helped solidify my frontend development abilities and provided a real-world context for applying responsive design, accessibility, and component-based thinking.
       </p>
-      <a href="https://github.com/WilliamCook0811/WilliamCook0811.github.io" target="_blank">View on GitHub</a>
+      <a href="https://github.com/willaurum/Willaurum.github.io" target="_blank">View on GitHub</a>
       </div>
       <button class="toggle-button">View More</button>
       </div>
@@ -198,7 +198,7 @@
             <li>Learned core programming concepts like functions, conditionals, and loops</li>
           </ul>
           <p>This project marked my entry into software development and helped me gain confidence in Python, problem-solving, and building user interfaces.</p>
-          <a href="https://github.com/WilliamCook0811/TicTacToePython" target="_blank">View on GitHub</a>
+          <a href="https://github.com/willaurum/Tic-Tac-Toe-with-a-UI" target="_blank">View on GitHub</a>
         </div>
         <button class="toggle-button">View More</button>
       </div>
