--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
 
     <div class="experience-item">
       <h3>LeetCode</h3>
-        <p>I have currently completed <span id="leetcode-count-exp">Loading...</span> LeetCode problems.</p>
-        <p>If you would like to view which problems I have completed and see their solutions, you can check out my GitHub repository!</p>
-        <p> <a href="https://github.com/willaurum/LeetCode-Solutions" target="_blank">View on GitHub</a> 
+      <p>
+        I have currently completed <span id="leetcode-count-exp">Loading...</span> LeetCode problems. This number updates live thanks to a custom JavaScript script I wrote that fetches my latest stats automatically whenever you load this page.
+      </p>
+      <p>
+        Practicing these problems regularly has helped me improve my problem-solving skills and strengthen my understanding of data structures and algorithms. If you’d like to see the specific problems I’ve solved along with my solutions, you can check out my GitHub repository.
+      </p>
+      <p>
+        <a href="https://github.com/willaurum/LeetCode-Solutions" target="_blank">View on GitHub</a>
       </p>
     </div>
+
+
 
 
     <div class="experience-item">
