--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,13 @@
 
   <header>
     <nav>
-      <h1>William Cook</h1>
+      <h1><a href="index.html">William Cook</a></h1>
       <ul>
         <li><a href="index.html#about">About Me</a></li>
         <li><a href="index.html#experience">Experience</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="learnPython.html">Lessons</a></li>
       </ul>
     </nav>
   </header>
