Fix HTML entity for '—' in baby status message

--- a/stridesync.html
+++ b/stridesync.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="status-indicator">
                         <div class="status-dot"></div>
-                        <span id="babyStatus">Baby on board &mdash; Weight detected</span>
+                        <span id="babyStatus">Baby on board - Weight detected</span>
                     </div>
                 </div>
 
