Update premium subtitle for StrideSync Plus

--- a/stridesync.html
+++ b/stridesync.html
@@ -292,7 +292,7 @@
                         <div class="premium-icon">★</div>
                         <div>
                             <p class="premium-label">StrideSync Plus</p>
-                            <p class="premium-subtitle">Make every stroll smarter</p>
+                            <p class="premium-subtitle">Free with purchase of the MotoStroller</p>
                         </div>
                     </div>
                     <ul class="premium-benefits">
